fix social spacing

--- a/index.css
+++ b/index.css
@@ -117,8 +117,8 @@ header a {
 
 .socials li {
     display: inline-flex;
-    margin-left: 15px;
-    margin-right: 15px;
+    margin-left: 10px;
+    margin-right: 10px;
     padding-bottom: 7px;
 }
 
